k8s/api/svc.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: api
# spec:
#   type: ClusterIP
#   ports:
#    - protocol: TCP
#      port: 3000
#      targetPort: 3000
#   selector:
#     app: api

apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
spec:
  ports:
  - name: service-port
    port: 80
    protocol: TCP
    targetPort: container-port
  selector:
    app: api
  type: LoadBalancer
