k8s/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dice-game
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
      - dice-game
  rules:
  - host: dice-game
    http:
      paths:
      - path: /api/v1/(.*)
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 80
      - path: /auth(.*)
        pathType: Prefix
        backend:
          service:
            name: ckey
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: gui
            port:
              number: 80
